--- a/portofolio.html
+++ b/portofolio.html
@@ -29,7 +29,7 @@
           <img src="imgs/tema2.png" alt="tema 2" />
 
           <a href="https://maltheaaen.dk/kea/02_web/01_website/website/index.html" target="_blank"
-            ><img class="top_img" src="imgs/web.png" alt="web hjemmeside"
+            ><img class="top_img" src="imgs/web.webp" alt="web hjemmeside"
           /></a>
         </div>
         <div class="div2">
@@ -53,7 +53,7 @@
         <div class="container div3" id="tema3">
           <img src="imgs/tema3.png" alt="tema 3" />
           <a href="https://maltheaaen.dk/kea/03_ux_ui/kodet_site/" target="_blank">
-            <img class="top_img" src="imgs/ux_ui.png" alt="web hjemmeside" />
+            <img class="top_img" src="imgs/ux_ui.webp" alt="web hjemmeside" />
           </a>
         </div>
         <div class="div4">
@@ -83,7 +83,7 @@
         <div class="container div5" id="tema4">
           <img src="imgs/tema4.png" alt="tema 4" />
           <a href="https://maltheaaen.dk/kea/04_animation/website/" target="_blank">
-            <img class="top_img" src="imgs/animation.png" alt="web hjemmeside" />
+            <img class="top_img" src="imgs/animation.webp" alt="web hjemmeside" />
           </a>
         </div>
         <div class="div6">
