--- a/om_mig.html
+++ b/om_mig.html
@@ -12,6 +12,10 @@
       href="https://fonts.googleapis.com/css2?family=Indie+Flower&family=Roboto&display=swap"
       rel="stylesheet"
     />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+    <link rel="manifest" href="/site.webmanifest" />
     <link rel="stylesheet" href="style.css" />
     <title>Om mig</title>
   </head>
